--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,9 @@
+title: Sarah Young
+description: >-
+  Sarah Young: Principal Security Advocate
 
+baseurl: ""
+
+url: "https://sarah-yo.github.io"
+
+theme: jekyll-theme-tactile
