--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Sarah Young - Cybersecurity Advocate
 description: A personal website for Sarah Young, showcasing her work in cybersecurity, public speaking, and more.
-theme: jekyll-minimal
+theme: jekyll-theme-minimal
 url: "https://sarahyoung.github.io"
 baseurl: ""
 author:
