--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Sarah Young - Cybersecurity Advocate
 description: A personal website for Sarah Young, showcasing her work in cybersecurity, public speaking, and more.
-theme: jekyll-minimal
+theme: jekyll-theme-minimal
 url: "https://sarahyoung.github.io"
 baseurl: ""
 author:
@@ -18,9 +18,3 @@ markdown: kramdown
 highlighter: rouge
 exclude:
   - README.md
-  - _config.yml
-  - _includes
-  - _layouts
-  - _pages
-  - assets
-  - index.md
